--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "winterfresh",
   "version": "1.0.0",
   "description": "winterfresh - your AI-powered personal assistant",
+  "type": "module",
   "scripts": {
-    "start": "tsx src/app.ts",
-    "build": "tsc"
+    "dev": "tsx src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "openai": "^6.13.0"
+    "dotenv": "^16.5.0",
+    "openai": "^5.1.0"
   },
-  "type": "module",
   "devDependencies": {
-    "@types/node": "^25.0.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "@anthropic-ai/sdk": "^0.52.0",
+    "@types/node": "^22.15.21",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
