--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "deploy": "git pull && npm run build && pm2 reload winterfresh"
   },
   "keywords": [],
   "dependencies": {
