--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "dependencies": {
     "dotenv": "^16.5.0",
+    "groq-sdk": "^0.37.0",
     "openai": "^5.1.0"
   },
   "devDependencies": {
