--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "@cartesia/cartesia-js": "^2.2.9",
     "dotenv": "^16.5.0",
     "groq-sdk": "^0.37.0",
     "openai": "^5.1.0"
